<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whatsapp_tut"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/backHome"
        android:layout_width="123dp"
        android:layout_height="52dp"
        android:onClick="onClickBack"
        android:text="@string/back"
        android:textSize="@dimen/botButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/goToWhatsapp"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="16dp"
        android:text="@string/whatsapp_go_to"
        android:textSize="@dimen/botButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/addProfile"
        android:layout_width="209dp"
        android:layout_height="70dp"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="191dp"
        android:onClick="onClickProfile"
        android:text="@string/whatsapp_tutorial_3"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.620" />

    <Button
        android:id="@+id/upload"
        android:layout_width="209dp"
        android:layout_height="70dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="23dp"
        android:onClick="onClickPhoto"
        android:text="@string/whatsapp_tutorial_2"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintBottom_toTopOf="@+id/addProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.480" />

    <TextView
        android:id="@+id/WhatsappTutorialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatsapp_tutorials"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/addContact"
        android:layout_width="209dp"
        android:layout_height="70dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="101dp"
        android:onClick="onClickNewContact"
        android:text="@string/whatsapp_tutorial_1"
        android:textSize="@dimen/tutorialButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.340" />

</androidx.constraintlayout.widget.ConstraintLayout>