...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/backToWhatsappTut3"
        android:layout_width="173dp"
        android:layout_height="41dp"
        android:layout_marginBottom="44dp"
        android:onClick="onClickGoToWhatsappTut"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
...
